--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1739,6 +1739,25 @@ h6 {
   height: 100%;
   border-radius: 5px;
 }
+
+.tblActiveBtn {
+  background-color: transparent !important;
+  box-shadow: none !important;
+  color: #4f555a;
+  padding: 0px 2px !important;
+  cursor: pointer;
+}
+.tblActiveBtn i {
+  font-size: 14px;
+  position: relative;
+  line-height: 1;
+  background-color: #13ff5a33;
+  border-color: transparent;
+  color: #006421;
+  padding: 8px;
+  height: 100%;
+  border-radius: 5px;
+}
 .top-selling .input-group-text{
   border-radius: 0px;
   cursor: pointer;
